# fut-mem

./: Makefile  README.md  README.rst  notes.md  pyproject.toml  run.py
fut_mem/: __init__.py  counting.py  parsing.py
tests/: test_counting.py  test_parsing.py
tests/fixtures/: bageri.json
