[tool.poetry]
name = "fut-mem"
version = "0.1.0"
description = "Assortment Intelligence assignment implementation"
authors = ["Gustaf Hallberg <ghallberg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
